<resources>
  <string name="app_name">EnergyMonitor</string>
  <string name="action_settings">Settings</string>

  <string name="btn_confirm">确定</string>
  <string name="btn_cancel">取消</string>
  <string name="session_expired">Session过期,请重新登录</string>
  <string name="refresh_load_more">加载更多</string>
  <!-- 服务器 -->
  <string name="network_not_normal">网络不给力</string>
  <string name="http_server_error">无法连接到服务器,请稍后再试</string>
  <string name="server_error">服务器错误</string>

  <!-- 更新 -->
  <string name="upgrade_info_normal">有新的版本更新，是否下载?</string>
  <string name="check_upgrade_failed">检测更新失败</string>

  <!-- 首页 -->
  <string name="fragment_home_title">VR烟台</string>
  <string name="fragment_home_menu_brand">品牌优选</string>
  <string name="fragment_home_menu_discover">每日发现</string>
  <string name="fragment_home_menu_gv_city">全景烟台</string>
  <string name="fragment_home_menu_ar_card">AR名片</string>
  <string name="fragment_home_menu_vr_device">VR设备</string>
  <string name="fragment_home_label_more">更多</string>
  <string name="fragment_home_label_city">VR烟台</string>
  <string name="fragment_home_label_city_news">烟台新闻</string>
  <string name="fragment_home_label_hot_game">热门游戏</string>

  <!-- 个人 -->
  <string name="fragment_profile_title">个人中心</string>
  <string name="fragment_profile_label_department">所属部门</string>
  <string name="fragment_profile_label_change_password">修改密码</string>
  <string name="fragment_profile_btn_quit">退出当前账号</string>

  <!-- 任务 -->
  <string name="fragment_task_title">任务</string>
  <string name="fragment_task_list_item_label_author">发起人:</string>
  <string name="fragment_task_list_item_label_project">项目:</string>

  <!-- 审批 -->
  <string name="fragment_approve_title">审批</string>

  <!-- 通知 -->
  <string name="fragment_notification_title">通知</string>
  <string name="permission_denied_camera">请检查是否开启摄像头权限</string>
  <string name="dialog_loading">正在加载</string>

  <string name="code_bar_capture_title_txt">扫一扫</string>
  <string name="code_bar_capture_prompt_text">将二维码置于方框内，即自行读取</string>
  <string name="activity_login_hint_account">请输入账号</string>
  <string name="activity_login_hint_password">请输入密码</string>
  <string name="activity_login_btn_submit">登 录</string>
  <string name="account_error_empty">账户名不能为空</string>
  <string name="password_error_empty">密码不能为空</string>
</resources>
