<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/src_login_header"
      />
  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="30dp"
      android:paddingTop="30dp"
      >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/src_login_app_name"
        />
  </FrameLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="@dimen/line_size"
      android:background="@color/bg_color_divider"
      />
  <EditText
      android:id="@+id/account"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@null"
      android:drawableLeft="@drawable/icon_login_account"
      android:drawablePadding="@dimen/margin_small"
      android:hint="@string/activity_login_hint_account"
      android:maxLength="@integer/max_account_length"
      android:maxLines="1"
      android:padding="@dimen/margin_large"
      android:singleLine="true"
      android:textColorHint="@color/font_color_hint"
      style="@style/Widget.App.TextView.Medium.Primary"
      />
  <View
      android:layout_width="match_parent"
      android:layout_height="@dimen/line_size"
      android:background="@color/bg_color_divider"
      android:maxLength="@integer/max_account_length"
      />
  <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@null"
      android:drawableLeft="@drawable/icon_login_password"
      android:drawablePadding="@dimen/margin_small"
      android:hint="@string/activity_login_hint_password"
      android:inputType="textPassword"
      android:maxLines="1"
      android:padding="@dimen/margin_large"
      android:singleLine="true"
      android:textColorHint="@color/font_color_hint"
      style="@style/Widget.App.TextView.Medium.Primary"
      />
  <android.support.v7.widget.AppCompatButton
      android:id="@+id/btn_submit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#2e75b6"
      android:padding="@dimen/margin_medium"
      android:text="@string/activity_login_btn_submit"
      android:textStyle="bold"
      style="@style/Widget.App.TextView.Large.White"
      />
</LinearLayout>