<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="?actionBarSize"
      android:background="@color/bg_home_title"
      android:paddingLeft="@dimen/margin_smallest"
      android:paddingRight="@dimen/margin_xlarge"
      >
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/fragment_home_title"
        style="@style/Widget.App.TextView.XLarge.Brand"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        >
      <ImageView
          android:id="@+id/btn_search"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="@dimen/margin_small"
          />
      <ImageView
          android:id="@+id/btn_"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="@dimen/margin_small"
          />
      <ImageView
          android:id="@+id/btn_vr"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="@dimen/margin_small"
          />
      <ImageView
          android:id="@+id/btn_menu_more"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />

    </LinearLayout>
  </RelativeLayout>
  <android.support.v4.widget.SwipeRefreshLayout
      android:id="@+id/swipe_container"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >
    <com.shudongedu.energy.ui.basic.scrollview.InterceptScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          >
        <com.youth.banner.Banner
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            ></com.youth.banner.Banner>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:padding="@dimen/margin_primary"
            >
          <TextView
              android:id="@+id/menu_brand"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:drawablePadding="@dimen/margin_smallest"
              android:drawableTop="@drawable/icon_home_brand"
              android:gravity="center"
              android:text="@string/fragment_home_menu_brand"
              style="@style/Widget.App.TextView.Medium.Primary"
              />

          <TextView
              android:id="@+id/menu_discover"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:drawablePadding="@dimen/margin_smallest"
              android:drawableTop="@drawable/icon_home_discover"
              android:gravity="center"
              android:text="@string/fragment_home_menu_discover"
              style="@style/Widget.App.TextView.Medium.Primary"
              />

          <TextView
              android:id="@+id/menu_gv_city"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:drawablePadding="@dimen/margin_smallest"
              android:drawableTop="@drawable/icon_home_gv_city"
              android:gravity="center"
              android:text="@string/fragment_home_menu_gv_city"
              style="@style/Widget.App.TextView.Medium.Primary"
              />

          <TextView
              android:id="@+id/menu_ar_card"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:drawablePadding="@dimen/margin_smallest"
              android:drawableTop="@drawable/icon_home_ar_card"
              android:gravity="center"
              android:text="@string/fragment_home_menu_ar_card"
              style="@style/Widget.App.TextView.Medium.Primary"
              />

          <TextView
              android:id="@+id/menu_device"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:drawablePadding="@dimen/margin_smallest"
              android:drawableTop="@drawable/icon_home_device"
              android:gravity="center"
              android:text="@string/fragment_home_menu_vr_device"
              style="@style/Widget.App.TextView.Medium.Primary"
              />

        </LinearLayout>

        <ImageView
            android:id="@+id/adv_first"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_home_adv_height"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:scaleType="centerCrop"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/white"
              android:paddingBottom="@dimen/margin_smallest"
              android:paddingRight="@dimen/margin_smallest"
              android:paddingTop="@dimen/margin_smallest"
              >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/icon_title_rect_green"
                android:drawablePadding="@dimen/margin_small"
                android:text="@string/fragment_home_label_city"
                style="@style/Widget.App.TextView.Large.Brand"
                />

            <TextView
                android:id="@+id/menu_city_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawablePadding="@dimen/margin_small"
                android:drawableRight="@drawable/icon_arrow_right"
                android:text="@string/fragment_home_label_more"
                style="@style/Widget.App.TextView.Medium.Secondary"
                />
          </RelativeLayout>
          <android.support.v7.widget.RecyclerView
              android:id="@+id/grid_vr_city"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"

              />
        </LinearLayout>

        <ImageView
            android:id="@+id/adv_second"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_home_adv_height"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:scaleType="centerCrop"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/white"
              android:paddingBottom="@dimen/margin_smallest"
              android:paddingRight="@dimen/margin_smallest"
              android:paddingTop="@dimen/margin_smallest"
              >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/icon_title_rect_green"
                android:drawablePadding="@dimen/margin_small"
                android:text="@string/fragment_home_label_city_news"
                style="@style/Widget.App.TextView.Large.Brand"
                />

            <TextView
                android:id="@+id/menu_news_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawablePadding="@dimen/margin_small"
                android:drawableRight="@drawable/icon_arrow_right"
                android:text="@string/fragment_home_label_more"
                style="@style/Widget.App.TextView.Medium.Secondary"
                />
          </RelativeLayout>
          <android.support.v7.widget.RecyclerView
              android:id="@+id/grid_city_news"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:spanCount="2"
              />
        </LinearLayout>

        <ImageView
            android:id="@+id/adv_third"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_home_adv_height"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:scaleType="centerCrop"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/white"
              android:paddingBottom="@dimen/margin_smallest"
              android:paddingRight="@dimen/margin_smallest"
              android:paddingTop="@dimen/margin_smallest"
              >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/icon_title_rect_green"
                android:drawablePadding="@dimen/margin_small"
                android:text="@string/fragment_home_label_hot_game"
                style="@style/Widget.App.TextView.Large.Brand"
                />

            <TextView
                android:id="@+id/menu_game_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawablePadding="@dimen/margin_small"
                android:drawableRight="@drawable/icon_arrow_right"
                android:text="@string/fragment_home_label_more"
                style="@style/Widget.App.TextView.Medium.Secondary"
                />
          </RelativeLayout>
          <android.support.v7.widget.RecyclerView
              android:id="@+id/grid_hot_game"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.App.TextView.Medium.Secondary"
            />
      </LinearLayout>
    </com.shudongedu.energy.ui.basic.scrollview.InterceptScrollView>
  </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>