<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/margin_small"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium"
        >

      <de.hdodenhof.circleimageview.CircleImageView
          android:id="@+id/user_avatar"
          android:layout_width="45dp"
          android:layout_height="45dp"
          android:layout_marginRight="@dimen/margin_small"
          tools:src="@mipmap/ic_launcher"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_toRightOf="@id/user_avatar"
          android:orientation="vertical"
          >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            >
          <TextView
              android:id="@+id/name"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              tools:text="名字"
              style="@style/Widget.App.TextView.Large.Primary"
              />

          <TextView
              android:id="@+id/phone"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              tools:text="1311111111"
              style="@style/Widget.App.TextView.Small.Secondary"
              />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/bg_color_divider"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_medium"
            android:paddingTop="@dimen/margin_medium"
            >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/fragment_profile_label_department"
              style="@style/Widget.App.TextView.Large.Primary"
              />

          <TextView
              android:id="@+id/department"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentRight="true"
              tools:text="1311111111"
              style="@style/Widget.App.TextView.Small.Secondary"
              />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/bg_color_divider"
            />

        <TextView
            android:id="@+id/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/fragment_profile_label_change_password"
            style="@style/Widget.App.TextView.Large.Primary"
            />

      </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/btn_quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@android:color/white"
        android:gravity="center"
        android:paddingBottom="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_medium"
        android:text="@string/fragment_profile_btn_quit"
        style="@style/Widget.App.TextView.Large.RedDark"
        />

  </LinearLayout>
</ScrollView>